--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title id="title">Environmental data collection and analysis</title>
       <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css">
-<link rel="stylesheet" type="text/css" href="stylesheets.css"/>
   </head>
   <body>
     
@@ -133,7 +132,7 @@
            <li>Transects - Sampling vegetation along an environmental gradient
            </li>
          </ul></p>
-<p>Ecology researches atudy species interactions, species–environment relationships, and the relationship of plant diversity to the structure and function of ecosystems. These interactions are sensitive to change. Disturbance, land use, trade and transportation, and changing climate result in the redistribution of species in novel environments, altered abundances, and local extirpation. The examples are numerous and from all parts of the world, yet considerable uncertainty regarding the impact of accelerating changes such as climate change, species invasions, and ecological heterogeneity on the status and trending patterns of plant diversity persists.</p>
+<p>Ecology researchers study species interactions, species–environment relationships, and the relationship of plant diversity to the structure and function of ecosystems. These interactions are sensitive to change. Disturbance, land use, trade and transportation, and changing climate result in the redistribution of species in novel environments, altered abundances, and local extirpation. The examples are numerous and from all parts of the world, yet considerable uncertainty regarding the impact of accelerating changes such as climate change, species invasions, and ecological heterogeneity on the status and trending patterns of plant diversity persists.</p>
 <p>Concepts such as rotation of cultures in agriculture to avoid draining the soil of the same nutrients and such as reforestation with a variety of species disposed at specific distance of one another depending on the specie instead of reforrestaion using a single tree species are derived from these extensive studies.
 </p>
 <p>Please enter below a forrest surface in meters to calculate how many trees you would find in your forrest:
@@ -201,6 +200,5 @@ The science, policy, and communication practices around data science, machine le
         </ul>
         </section>
     </main>
-<script src="myscript.js"></script>
   </body>
 </html>
